package ex44;

import java.util.List;

public class ProductModel {
    //product model data class
    //product model constructor
    //product model getters and setters

    public List<Product> products = null;

    public List<Product> getProducts() {
        return products;
    }

    public void setProducts(List<Product> products) {
        this.products = products;
    }

}
