@startuml
'https://plantuml.com/class-diagram

class App44{
+main()
productSearch()
}
class ReadFile{
jsonReader()
}
class ProductModel{
List<Product> products
constructor()
getProducts()
setProducts()
}
class Product{
String name
Double Value
Int Quantity
constructors()
getName()
setName()
getValue()
setValue()
getQuantity()
setQuantity()
}


App44 -- ReadFile
ReadFile -- ProductModel
ProductModel o-- Product





@enduml